stop overlap on flip

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,7 +1,7 @@
 .scene{
     height: 200px;
     width: 150px;
-    perspective: 600px;
+    perspective: 10000px;
     margin: 10px;
 }
 
